# solid

./: CMakeLists.txt  ChangeLog.txt  Makefile.am  README.1st  README.txt
VisualC6/: solid.dsw
VisualC6/broad/: broad.dsp
VisualC6/complex/: complex.dsp
VisualC6/convex/: convex.dsp
VisualC6/dynamics/: dynamics.dsp
VisualC6/gldemo/: gldemo.dsp
VisualC6/mnm/: mnm.dsp
VisualC6/physics/: physics.dsp
VisualC6/qhull/: qhull.dsp
VisualC6/sample/: sample.dsp
VisualC6/solid/: solid.dsp
VisualC6/solid_dll/: solid_dll.dsp
doc/: Makefile.in  solid3.info  solid3.texi  version.texi
doc/solid3.html/: Bugs.html  GPL.html  Installation.html  Introduction.html  License.html  Projects.html  QPL.html  Usage.html  index.html
examples/: Makefile.in  gldemo.cpp
examples/dynamics/: Makefile.in
include/: Makefile.in  SOLID_types.h  config.h.in
src/: CMakeLists.txt  DT_C-api.cpp  DT_Object.cpp  DT_Object.h  Makefile.am  Makefile.in
src/broad/: Makefile.in
src/complex/: DT_BBoxTree.h  DT_Complex.cpp  Makefile.am  Makefile.in
src/convex/: DT_PenDepth.cpp  DT_TriEdge.h  Makefile.am  Makefile.in
src/qhull/: CMakeLists.txt  Makefile.am  Makefile.in
